--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         id="WebApp_ID" version="4.0">
     <display-name>ServletProjectTwo</display-name>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
@@ -15,7 +15,7 @@
     <servlet>
         <display-name>BoardFrontController</display-name>
         <servlet-name>BoardFrontController</servlet-name>
-        <servlet-class>main.java.com.sungsu.controller.BoardFrontController</servlet-class>
+        <servlet-class>com.sungsu.controller.BoardFrontController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>BoardFrontController</servlet-name>
